# godserve

./: .gitignore  ARCH.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/agents/: architect.md  coder.md  manager.md  reviewer.md  visionary.md
examples/echo/: godserve.yaml  run.sh  setup.sh  task.py
examples/echo_serve/: godserve.yaml  run.sh  setup.sh  task.py
examples/ivrit_transcribe/: README.md  godserve.yaml  run.sh  setup.sh  transcribe.py
godserve/: __init__.py  cli.py  db.py  models.py  protocol.py
godserve/client/: sdk.py
godserve/coordinator/: app.py  blobs.py  dispatcher.py  load.py  pubsub.py  queue.py  registry.py
godserve/worker/: agent.py  content.py  serve_shim.py  session.py
godserve/worker/backends/: base.py  local.py
godserve/worker/envs/: base.py  venv.py
tests/: conftest.py  test_p1_backend_resolution.py  test_p1_core.py  test_p2_sessions.py  test_p3_load.py  test_p4_example.py  test_p5_streaming.py
tests/fixtures/: dummy_backend.py
